adjusted to jdk 1.8